Add Firebase integration and UI components for task management

--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -1,5 +1,5 @@
 flutter_native_splash:
-  color: "#458AE5"
+  color: "#FFFFFF"
   image: assets/images/splashIcon.png
   color_dark: "#458AE5"
   image_dark: assets/images/splashIcon.png
