--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  firebase_core: ^3.10.0
+  firebase_database: ^11.3.0
+  cloud_firestore: ^5.6.1
+  provider: ^6.1.2
+  fluttertoast: ^8.2.10
+  flutter_slidable: ^3.1.2
   
 
 dev_dependencies:
@@ -47,6 +53,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
   flutter_native_splash: ^2.4.4
+  easy_date_timeline: ^2.0.6
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
