--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   provider: ^6.1.2
   fluttertoast: ^8.2.10
   flutter_slidable: ^3.1.2
+  firebase_auth: ^5.4.1
   
 
 dev_dependencies:
