--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,14 @@ dependencies:
   flutter_slidable: ^3.1.2
   firebase_auth: ^5.4.1
   
+  # UI Enhancement
+  google_fonts: ^4.0.3
+  flutter_animate: ^4.1.1+1
+  lottie: ^2.3.2
+  flutter_svg: ^2.0.5
+  shimmer: ^3.0.0
+  curved_navigation_bar: ^1.0.3
+  flutter_staggered_animations: ^1.1.1
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +78,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/animations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
